--- a/tyrasz/css/app.css
+++ b/tyrasz/css/app.css
@@ -579,12 +579,234 @@ figure small {
   opacity: .85;
 }
 
+.hero__content ul {
+  padding-left: 16px;
+}
+
+.hero__content li {
+  margin: 22.4px 0;
+}
+
 .hero__title {
   font-size: 1.8rem;
 }
 
-.technical + .technical {
+.radiators-info + .radiators-info {
   background-image: url(../images/brushed_alu.png);
+}
+
+.advantages {
+  background-image: url(../images/brushed_alu.png);
+}
+
+.advantages__grid {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.advantages__item {
+  width: 100%;
+  text-align: center;
+  padding: 31.36px;
+}
+
+.advantages__item--title h2 {
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-size: 1.8rem;
+  line-height: 1.3;
+}
+
+.advantages__item--title p {
+  font-size: 1.15rem;
+}
+
+.advantages__item svg {
+  color: #ff8a00;
+  width: 3rem;
+  height: 3rem;
+  margin-bottom: 16px;
+}
+
+.advantages__item strong {
+  display: block;
+  font-size: 1.15rem;
+}
+
+.assortment {
+  position: relative;
+  background-image: url(../images/mini-hero.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.assortment .section__inner {
+  position: relative;
+  z-index: 1;
+  flex-direction: column;
+  padding: 0 16px;
+}
+
+.assortment .section__header {
+  margin-bottom: 0;
+}
+
+.assortment-bg {
+  position: absolute;
+  z-index: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 96%;
+  height: 100%;
+  margin: 0 auto;
+  background-color: white;
+  opacity: .85;
+}
+
+.assortment p,
+.assortment ul {
+  width: 100%;
+}
+
+.assortment ul {
+  margin-top: 0;
+  font-size: 1.15rem;
+}
+
+.assortment a {
+  color: #007dc3;
+}
+
+.assortment a:hover {
+  text-decoration: underline;
+}
+
+/**********************
+        Catalog
+**********************/
+
+.catalog__wrapper {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.catalog__item {
+  position: relative;
+  width: calc(100% / 4 - 10px);
+  margin: 5px;
+  color: #002740;
+  border: 1px solid #eceff1;
+  border-radius: 2px;
+  overflow: hidden;
+}
+
+.catalog__item:hover {
+  border-color: #ff8a00;
+  box-shadow: 0 0 10px -2px rgba(255, 138, 0, 0.65);
+}
+
+.catalog__item:hover .item__image {
+  -webkit-transform: scale(1.15);
+          transform: scale(1.15);
+}
+
+.catalog .section__inner {
+  margin-top: 31.36px;
+}
+
+.catalog .item__image {
+  width: 100%;
+  height: auto;
+  transition-duration: 1s;
+}
+
+.catalog .item__title {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  text-align: center;
+}
+
+/***********************
+        The Item
+***********************/
+
+.the-item .section__inner {
+  margin-top: 31.36px;
+}
+
+.the-item__wrapper {
+  width: 75%;
+  padding-right: 61.4656px;
+}
+
+.the-item__image {
+  text-align: center;
+}
+
+.the-item__image img {
+  width: 50%;
+  height: auto;
+}
+
+.the-item__subheader {
+  font-weight: normal;
+}
+
+.the-item__section + .the-item__section {
+  margin-top: 61.4656px;
+}
+
+.the-item__section table {
+  width: 100%;
+  border-collapse: collapse;
+}
+
+.the-item__section tr:hover td {
+  background-color: #eceff1;
+}
+
+.the-item__section th,
+.the-item__section td {
+  padding: 8.16327px 0;
+  text-align: center;
+  border: 1px solid #eceff1;
+}
+
+.the-item__section th {
+  border-bottom-width: 3px;
+  font-weight: normal;
+}
+
+.the-item__sidebar {
+  width: 25%;
+}
+
+.advantage {
+  display: flex;
+  margin-bottom: 16px;
+}
+
+.advantage__icon {
+  color: #ff8a00;
+  width: 2.5rem;
+  height: 2.5rem;
+}
+
+.advantage__text {
+  width: calc(100% - 2.5rem);
+  padding-left: 8.16327px;
+}
+
+.advantage__text p {
+  margin: 8.16327px 0;
+}
+
+.advantage__title {
+  color: #007dc3;
 }
 
 /*!
@@ -710,6 +932,14 @@ figure small {
   .section__inner {
     max-width: 96%;
   }
+
+  .advantages__item {
+    width: calc(100% / 2);
+  }
+
+  .advantages__item--title {
+    text-align: right;
+  }
 }
 
 @media (min-width: 768px) {
@@ -778,8 +1008,25 @@ figure small {
     left: initial;
   }
 
+  .hero__content ul {
+    font-size: 1.4rem;
+    padding-left: 31.36px;
+    width: 70%;
+  }
+
   .hero__title {
     font-size: 2.8rem;
+  }
+
+  .assortment-bg {
+    width: 50%;
+    bottom: initial;
+    right: initial;
+  }
+
+  .assortment p,
+  .assortment ul {
+    width: 40%;
   }
 }
 
@@ -792,11 +1039,19 @@ figure small {
     width: 22%;
     margin-top: 0;
   }
+
+  .advantages__item {
+    width: calc(100% / 3);
+  }
 }
 
 @media (min-width: 1280px) {
   .section__inner {
     max-width: 1240px;
+  }
+
+  .advantages__item {
+    padding: 31.36px 61.4656px;
   }
 }
 
