--- a/rd/css/app.css
+++ b/rd/css/app.css
@@ -222,39 +222,31 @@
   padding: 2rem 9px;
 }
 
-.cards .card-item {
+.cards > .row {
+  padding-left: 9px;
+  padding-right: 9px;
+}
+
+.card-item {
   display: block;
   color: #263238;
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin: 5px 0;
   width: 100%;
-}
-
-.cards .card-item:hover {
-  text-decoration: none;
-  color: #03a9f4;
-}
-
-.cards .card-item__inner {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  height: 100%;
-  padding: 8px 10px;
+  text-align: center;
   border: 1px solid #eceff1;
   border-bottom: 4px solid #a0d6a2;
   border-radius: 4px;
-  text-align: center;
   background-color: #f8f9fa;
   box-shadow: 0 4px 10px -2px rgba(0, 0, 0, 0.15);
 }
 
-.cards .card-item__inner:hover {
+.card-item:hover {
+  text-decoration: none;
+  color: #03a9f4;
   border-bottom-color: #4caf50;
 }
 
-.cards .card-item__inner:hover .card-item__icon {
+.card-item:hover .card-item__icon {
   -webkit-filter: grayscale(0) brightness(1);
           filter: grayscale(0) brightness(1);
   opacity: 1;
@@ -262,21 +254,37 @@
           transform: scale(1);
 }
 
-.cards .card-item__icon {
+.card-item__inner {
+  display: inline-block;
+  vertical-align: middle;
+  min-width: 240px;
+  height: 100%;
+  padding: 8px 10px;
+  text-align: left;
+}
+
+.card-item__icon,
+.card-item__text {
+  display: inline-block;
+  vertical-align: middle;
+}
+
+.card-item__icon {
   width: 48px;
   height: 48px;
+  margin-bottom: 0;
   opacity: .75;
   transition-duration: .25s;
   -webkit-transform: scale(0.85);
           transform: scale(0.85);
 }
 
-.cards .card-item svg {
+.card-item svg {
   width: 100%;
   height: 100%;
 }
 
-.cards .card-item__text {
+.card-item__text {
   margin: 0;
   font-weight: 400;
   font-size: .85rem;
@@ -449,7 +457,14 @@
   vertical-align: middle;
 }
 
-.catalog__table td img {
+.catalog__preview {
+  display: inline-block;
+  vertical-align: middle;
+  padding: 2px;
+  border: 3px solid #c5ecfe;
+}
+
+.catalog__preview img {
   height: 32px;
   width: auto;
 }
@@ -489,10 +504,23 @@
     display: block;
   }
 
-  .cards .card-item__inner {
-    flex-direction: column;
+  .card-item {
+    margin-left: 5px;
+    margin-right: 5px;
+  }
+
+  .card-item__inner {
+    display: block;
     padding-top: 15px;
     padding-bottom: 15px;
+    text-align: center;
+    min-width: auto;
+  }
+
+  .card-item__icon,
+  .card-item__text {
+    display: block;
+    margin: 0 auto 10px;
   }
 
   .main-footer__copyright img {
@@ -528,17 +556,12 @@
     flex-direction: row;
   }
 
-  .cards .card-item__inner {
+  .card-item__inner {
     padding-left: 0;
     padding-right: 0;
   }
 
-  .cards .card-item__inner {
-    padding-left: 0;
-    padding-right: 0;
-  }
-
-  .cards .card-item__icon {
+  .card-item__icon {
     -webkit-filter: grayscale(1) brightness(1.15);
             filter: grayscale(1) brightness(1.15);
     -webkit-transform: scale(0.87);
